# RepoGuard

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start.sh  system_prompt.md  ui.py
.repoguard/: scope.json
core/: agent_client.py  auth_gitlab.py  config.py  events.py  gatekeeper.py  gitlab_client.py  guardian.py  models.py
repoguard_agent/: agent.py  mcp_config.py  prompt.py  tools.py
repoguard_agent/sub_agents/architect/: __init__.py  agent.py  prompt.py
repoguard_agent/sub_agents/gatekeeper/: agent.py  prompt.py
repoguard_agent/sub_agents/guardian/: agent.py  prompt.py
scripts/: deploy.ps1  setup_sandbox.py  setup_webhook.py  start.sh
