[project]
name = "repoguard"
version = "0.1.0"
description = "An autonomous repository guardian that enforces architectural rules on GitLab Merge Requests and provides self-healing remediation for production incidents."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alexander Vasiliev", email = "alexvas10@gmail.com" }
]
keywords = ["agentic", "gitlab", "vertex-ai", "automation", "security"]
dependencies = [
    "fastapi>=0.136.3",
    "flet[all,web]>=0.85.3",
    "google-adk>=2.2.0",
    "google-cloud-firestore>=2.27.0",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
